2024-09-16T00:49:17Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/10875757700 # 420
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2024-09-16
* notice: last 14d: unq all: 3 3
* notice: prev accum: outdated-unq outdated-all / unq all: 412 802 / 416 806
* notice: next accum: outdated-unq outdated-all / unq all: 413 803 / 416 806
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2024-09-01] / []

2024-09-15T01:45:02Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/10867146310 # 419
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2024-09-15
* notice: last 14d: unq all: 4 4
* notice: prev accum: outdated-unq outdated-all / unq all: 412 802 / 415 805
* notice: next accum: outdated-unq outdated-all / unq all: 412 802 / 416 806
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [] / [2024-09-14]

2024-09-11T01:35:38Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/10803408038 # 415
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2024-09-11
* notice: last 14d: unq all: 3 3
* notice: prev accum: outdated-unq outdated-all / unq all: 411 801 / 414 804
* notice: next accum: outdated-unq outdated-all / unq all: 412 802 / 415 805
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [2024-08-28] / [2024-09-10]

2024-09-06T01:35:12Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/10730902388 # 410