@@ -1,3 +1,12 @@
+2024-09-17T00:37:41Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/10894359829 # 421
+* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2024-09-17
+* notice: last 14d: unq all: 2 2
+* notice: prev accum: outdated-unq outdated-all / unq all: 413 803 / 416 806
+* notice: next accum: outdated-unq outdated-all / unq all: 414 804 / 416 806
+* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
+* notice: removed / changed dates: [2024-09-02] / []
+
 2024-09-16T00:49:17Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/10875757700 # 420
 * notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2024-09-16
